<resources>
    <string name="app_name">The Food HeadQuaters</string>
    <string name="mobile_number">Mobile Number (10 digits)</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_name">Name (Min. 3 characters)</string>
    <string name="address">Delivery Address</string>
    <string name="choose_password">Password (Min. 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registration">Register</string>
    <string name="home">Home</string>
    <string name="offers">New Offers</string>
    <string name="my_profile">My Profile</string>
    <string name="about_us">About Me</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Log out</string>
    <string name="cart">Cart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_history">Order History</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="filter">Filter</string>
    <string name="restaurant_name">Restaurant</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="profile_details">Your Profile Details are listed below:</string>
    <string name="go_to_cart">Proceed to Cart</string>
    <string name="confirm_order">Place Order</string>
    <string name="action_search">Search</string>
    <string name="search_restaurants">Search Restaurants</string>
    <string name="favorites">Favorite Restaurants</string>
    <string name="channel_name">Android Training</string>
    <string name="channel_description">This notification confirms that the order is placed</string>
    <string name="dummy_phone">+91-1234567890</string>
    <string name="empty_cart">Your cart is currently empty</string>
    <string name="no_favorites">You do not have any favorite restaurants</string>
    <string name="no_orders">You haven\'t placed any orders yet</string>
    <string name="faq_answer_one">A.1 The Food HeadQuaters is a food delivery service that does Home Deliveries to it customers from over 200 restaurants  outlets in Pune Banglore and NaviMumbai.
                                   We are one of INDIAs premier Home Delivery Service.
                                Operational since 2020 we have served over 2000 people so far.
    </string>
    <string name="faq_answer_two">A.2 YES if you are looking at using the app to place orders.
              But we also accept phone orders. When you have decided what you want to order you can call us and place the order or alternately
        while taking delivery details our staff can register you in our database with minimal details. This helps us
        easily process your next order.
    </string>
    <string name="faq_answer_four">Yes of course
However each restaurant order will be treated as a different order. So the delivery charges may be applicable for each order.

    </string>
    <string name="faq_answer_three">A.3 Each restaurant gives us a small percentage of the order amount. But for small orders we cannot afford to deliver within the commission we receive. Instead of declining such orders we give
        you the option of delivering it to you if you are prepared to pay the delivery charges</string>
    <string name="faq_answer_five">A.5 We make every effort to keep the prices updated and accurate. Prices listed on this website are however approximate and subject to changes by the Restaurant and Taxes.
The final price is as per the ACTUAL BILL raised by the Restaurant and presented to you, at the time of the delivery.
    </string>
    <string name="faq_answer_six">A.6 Sorry, as a practice we do not give discounts as we work on very slim margins already.
But we could check with the Restaurant  and IF they offer any special discount we will be happy to pass it on to you
    </string>
    <string name="register_yourself">
        <u>Don\'t have an account? Sign up now</u>
    </string>
    <string name="forgot_password">
        <u>Forgot Password?</u>
    </string>
    <string name="email">Email Address</string>
    <string name="enter_mobile_forgot_password">Enter your registered mobile number and email below:</string>
    <string name="next">Next</string>
    <string name="enter_otp">Enter the received OTP below</string>
    <string name="otp">OTP (4 characters)</string>
    <string name="new_password">New Password (Min. 4 characters)</string>
    <string name="submit">Submit</string>
    <string name="order_placed">Your order has been successfully placed!</string>
    <string name="order_history_static_text">Your previous orders are listed below :</string>
    <string name="dummy_date">20/12/2018</string>
    <array name="filters">
        <item>Cost(Low to High)</item>
        <item>Cost(High to Low)</item>
        <item>Rating</item>
    </array>

</resources>
