<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background"
            android:id="@+id/rlOTP">


            <TextView
                android:id="@+id/txtEnterMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="164dp"
                android:layout_marginEnd="-9dp"
                android:fontFamily="@font/poppins_medium"
                android:padding="10dp"
                android:text="@string/enter_otp"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/etOTP"
                android:layout_width="386dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtEnterMobile"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="46dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:fontFamily="@font/poppins"
                android:hint="@string/otp"
                android:inputType="number"
                android:maxLength="4"
                android:maxLines="1"
                android:padding="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/etNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etOTP"
                android:background="@drawable/rounded_edittext"
                android:padding="10dp"
                android:fontFamily="@font/poppins"
                android:layout_margin="10dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:maxLength="10"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:hint="@string/new_password"/>


            <EditText
                android:id="@+id/etConfirmNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etNewPassword"
                android:background="@drawable/rounded_edittext"
                android:padding="10dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:maxLength="10"
                android:fontFamily="@font/poppins"
                android:layout_margin="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:hint="@string/confirm_password"/>


            <Button
                android:id="@+id/btnSubmitOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etConfirmNewPassword"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/submit"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppins_medium"/>
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</ScrollView>
